--- a/Entrega 1.1 Functions y Template Literals/Nivel 3/Exercise 1/index.html
+++ b/Entrega 1.1 Functions y Template Literals/Nivel 3/Exercise 1/index.html
@@ -10,6 +10,6 @@
     <h2> ejercicio 1 Nivel 3</h2>
     
 
-    <script src="exercise1.js"></script>
+    <script src="ejercicio1.js"></script>
 </body>
 </html>
